--- a/pom.xml
+++ b/pom.xml
@@ -83,11 +83,13 @@
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-broker</artifactId>
       <version>${activemq.version}</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.activemq</groupId>
       <artifactId>activemq-kahadb-store</artifactId>
       <version>${activemq.version}</version>
+      <scope>compile</scope>
     </dependency>
 
     <!-- Add any other dependencies that you want packaged into your module (in the lib dir) here
